# raylib-pixel-editor

./: .gitignore  AGENTS.md  CMakeLists.txt  Makefile  Makefile.win  README.md  pixel-editor.c
docs/: README.md
palettes/: 2bit-demichrome.txt  README.md  skylyte5.txt  wood-n-steel.txt
src/: pixel-editor.c  pixel_core.c  pixel_core.h  pixel_ui_logic.c  pixel_ui_logic.h
tests/: test_pixel_core.c
